refact: organizando markdowns do código e criando branch de Dev

--- a/Algas.ipynb
+++ b/Algas.ipynb
@@ -21,10 +21,17 @@
         "import sys\n",
         "import math\n",
         "import psutil as ps\n",
-        "import matplotlib.pyplot as plt  # type: ignore\n",
+        "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "import mysql.connector\n",
         "from datetime import datetime"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Criando conexão com o banco de dados"
       ]
     },
     {
@@ -40,22 +47,8 @@
         "  database=\"algas\"\n",
         ")\n",
         "\n",
-        "print(mydb)\n",
-        "\n",
         "mycursor = mydb.cursor()\n",
         "sql = \"INSERT INTO dados (valor) VALUES (%s)\""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Crie a tabela:\n",
-        "\n",
-        "CREATE TABLE dados(\n",
-        " id int auto_increment primary key,\n",
-        " valor decimal(10,2)\n",
-        ");"
       ]
     },
     {
@@ -64,7 +57,14 @@
         "id": "gOjLMPe8VPSM"
       },
       "source": [
-        "### Definindo Função"
+        "### Definindo Funções"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Função get_transactions()"
       ]
     },
     {
@@ -83,6 +83,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Função get_time()"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -90,7 +97,7 @@
       },
       "outputs": [],
       "source": [
-        "def getTime():\n",
+        "def get_time():\n",
         "    agora = time.time()\n",
         "    hoje_meia_noite = datetime.combine(datetime.today(), datetime.min.time())\n",
         "    meia_noite_timestamp = time.mktime(hoje_meia_noite.timetuple())\n",
@@ -98,6 +105,13 @@
         "    diferenca_minutos = diferenca_segundos / 60\n",
         "\n",
         "    return diferenca_minutos\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Função run()"
       ]
     },
     {
@@ -121,22 +135,22 @@
         "        'cpu': [],\n",
         "        'memory': []\n",
         "    }\n",
-        "    inicio = getTime()\n",
+        "    inicio = get_time()\n",
         "    arrTime['inicio'].append(inicio)\n",
         "    for transaction in transactions:\n",
-        "        arrTime['inFirstFor'].append(getTime())\n",
-        "        val = (math.floor(getTime() * 100) / 100,)\n",
+        "        arrTime['inFirstFor'].append(get_time())\n",
+        "        val = (math.floor(get_time() * 100) / 100,)\n",
         "        mycursor.execute(sql, val)\n",
         "        mydb.commit()\n",
         "        for i in range(1, transaction):\n",
-        "            inSecondFor = getTime()\n",
+        "            inSecondFor = get_time()\n",
         "            arrTime['inSecondFor'].append(inSecondFor)\n",
         "            arr.append(str(i)*(i%1000))\n",
-        "            afterAppend = getTime()\n",
+        "            afterAppend = get_time()\n",
         "            arrTime['afterAppend'].append(afterAppend)\n",
         "            usages['cpu'].append(ps.cpu_percent())\n",
         "            usages['memory'].append(ps.virtual_memory().percent)\n",
-        "            val = (math.floor(getTime() * 100) / 100,)\n",
+        "            val = (math.floor(get_time() * 100) / 100,)\n",
         "            mycursor.execute(sql, val)\n",
         "\n",
         "        print(f'Transação {transaction} encerrada!')\n",
@@ -150,11 +164,39 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Função plot()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def plot(data):\n",
+        "  xpoints = np.array(list(range(0, len(data))))\n",
+        "  ypoints = np.array(data)\n",
+        "\n",
+        "  plt.plot(xpoints, ypoints)\n",
+        "  plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Gerando Valores"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "V6qbzBa9miYa"
       },
       "source": [
-        "### Range (10, 60, 10)"
+        "Range (10, 60, 10)"
       ]
     },
     {
@@ -182,27 +224,12 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zWCdVVvNaXaq",
-        "outputId": "87c2385c-4788-45e1-b60f-6ba5b61c8165"
-      },
-      "outputs": [],
-      "source": [
-        "print(time.time())"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Afo-6CRKmocW"
       },
       "source": [
-        "### Range (100, 600, 100)"
+        " Range (100, 600, 100)"
       ]
     },
     {
@@ -236,7 +263,7 @@
         "id": "Yb9_rON7mvs9"
       },
       "source": [
-        "### Range (1000, 6000, 1000)"
+        "Range (1000, 6000, 1000)"
       ]
     },
     {
@@ -270,7 +297,7 @@
         "id": "BEFkDCnEm0o8"
       },
       "source": [
-        "### Range (100000, 600000, 100000)"
+        "Range (100000, 600000, 100000)"
       ]
     },
     {
@@ -299,7 +326,7 @@
         "id": "9aw4dKXYnFCa"
       },
       "source": [
-        "### Range (1000000, 6000000, 1000000)"
+        " Range (1000000, 6000000, 1000000)"
       ]
     },
     {
@@ -321,52 +348,6 @@
         "plot(result['usages']['cpu'])\n",
         "plot(result['usages']['memory'])"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Sw8OhaWamVy9"
-      },
-      "source": [
-        "### Criando Graficos"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Qzsko9piZIEb"
-      },
-      "outputs": [],
-      "source": [
-        "def plot(data):\n",
-        "  xpoints = np.array(list(range(0, len(data))))\n",
-        "  ypoints = np.array(data)\n",
-        "\n",
-        "  plt.plot(xpoints, ypoints)\n",
-        "  plt.show()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "NEbf0Jn5Th-8"
-      },
-      "outputs": [],
-      "source": [
-        "dados = run(100000, 600000, 100000)\n",
-        "plot(dados)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "ETjT6tBuadOu"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
