feat: retornando valores no formato JSON predefinido pelo grupo

--- a/sensor_harmonica.ipynb
+++ b/sensor_harmonica.ipynb
@@ -8,7 +8,7 @@
     "### Sensor de Harmônicas\n",
     "\n",
     "Sensor Utilizado: AcuRev 2100 Multi-Circuit\n",
-    "https://www.accuenergy.com/wp-content/uploads/AcuRev-2100-Multi-Circuit-Submeter-Datasheet.pdf?utm_source=chatgpt.com"
+    "https://www.accuenergy.com/wp-content/uploads/AcuRev-2100-Multi-Circuit-Submeter-Datasheet.pdf"
    ]
   },
   {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 3,
    "id": "4b4c7dd0",
    "metadata": {},
    "outputs": [],
@@ -31,18 +31,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 4,
    "id": "51df29e8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.01\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_harmonics(noise = 1):\n",
     "\n",
@@ -84,10 +76,41 @@
     "    if(harmonics > 100):\n",
     "        harmonics = 100.00\n",
     "\n",
-    "    return round(harmonics,2)\n",
-    "\n",
-    "print(get_harmonics(1))\n",
+    "    return {\n",
+    "        \"valor_leitura\": round(harmonics,2),\n",
+    "        \"tipo_dado\": {\n",
+    "            \"nome\": \"Harmônicas\",\n",
+    "            \"descricao\": \"Valor da harmônica obtido pelo sensor.\"\n",
+    "        },\n",
+    "        \"sensor\": {\n",
+    "            \"nome\": \"AcuRev 2100 Multi-Circuit\",\n",
+    "            \"fabricante\": \"AccuEnergy\",\n",
+    "            \"datasheet\": \"https://www.accuenergy.com/wp-content/uploads/AcuRev-2100-Multi-Circuit-Submeter-Datasheet.pdf\"\n",
+    "        }\n",
+    "    }\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "37823964",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'valor_leitura': 80.58, 'tipo_dado': {'nome': 'Harmônicas', 'descricao': 'Valor da harmônica obtido pelo sensor.'}, 'sensor': {'nome': 'AcuRev 2100 Multi-Circuit', 'fabricante': 'AccuEnergy', 'datasheet': 'https://www.accuenergy.com/wp-content/uploads/AcuRev-2100-Multi-Circuit-Submeter-Datasheet.pdf'}}\n",
+      "4.17\n"
+     ]
+    }
+   ],
+   "source": [
+    "noise = 4\n",
+    "\n",
+    "print(get_harmonics(noise))\n",
+    "print(get_harmonics(noise)[\"valor_leitura\"])"
    ]
   }
  ],
